# call_analytics

./: .gitignore  INSTRUCTIONS.md  README.md  README_CONVERSATIONAL_INTELLIGENCE.md  README_SETUP.md  Untitled2.ipynb  pyproject.toml  requirements.txt  setup.py  template.env
data/prompts/: customerOnlySummary.txt
notebooks/: 1 - DATA RETRIEVAL - Aircall.ipynb  2 - EDA - Aircall.ipynb  3 - OPENAI - Get additional features.ipynb  4 - OPENAI - Get embeddings.ipynb  5 - CLUSTERING - OpenAI embeddings.ipynb  6 - LABELED DATA.ipynb  7 - EDA - Labels.ipynb  7_1 - CLASSIFICATION - Multi-label.ipynb  7_1_1 - CLASSIFICATION - Multi-class - Flat.ipynb  7_1_2 - CLASSIFICATION - Multi-class - Flat.ipynb  7_2_1 - CLASSIFICATION - Multi-class - Hierarchical.ipynb  7_2_2 - CLASSIFICATION - Multi-class - Hierarchical.ipynb  8_1 - TAGGING - Binary classification.ipynb  999 - PII Check.ipynb
poc-call-analytics-data_retrieval-conversational_intelligence/notebooks/: 1 - DATA RETRIEVAL - Aircall.ipynb
scripts/: 1 - DATA RETRIEVAL - Aircall.py  2 - EDA - Aircall.py  3 - OPENAI - Get additional features.py  4 - OPENAI - Get embeddings.py  5 - CLUSTERING - OpenAI embeddings.py  6 - LABELED DATA.py  7 - EDA - Labels.py  7_1 - CLASSIFICATION - Multi-label.py  7_1_1 - CLASSIFICATION - Multi-class - Flat.py  7_1_2 - CLASSIFICATION - Multi-class - Flat.py  7_2_1 - CLASSIFICATION - Multi-class - Hierarchical.py  7_2_2 - CLASSIFICATION - Multi-class - Hierarchical.py  8_1 - TAGGING - Binary classification.py  999 - PII Check.py  README.md  data_retrieval.py  eda.py
src/call_analytics/: conversation.py  hierarchical_evaluation.py  openai_utility.py  pii_utility.py  settings.py
src/call_analytics_conversational/: __init__.py  api_utils.py  conversation.py  pii_utility.py  settings.py  utils.py
